--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(lab1 main.cpp lib/matrix.h lib/matrix.cpp lib/matrixops.h lib/matrixops.cpp)
+add_executable(lab1 main.cpp lib/matrix.h lib/matrix.cpp lib/matrixops.h lib/matrixops.cpp lib/tridiagonal_matrix.h lib/tridiagonal_matrix.cpp)
