Implemented simple iterations method and CSR sparse matrix representation

--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -3,4 +3,6 @@ project(lab1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(lab1 main.cpp lib/matrix.h lib/matrix.cpp lib/matrixops.h lib/matrixops.cpp lib/tridiagonal_matrix.h lib/tridiagonal_matrix.cpp)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -fsanitize=address")
+
+add_executable(lab1 main.cpp lib/matrix.h lib/matrix.cpp lib/matrixops.h lib/matrixops.cpp lib/tridiagonal_matrix.h lib/tridiagonal_matrix.cpp lib/sparse_matrix.h lib/sparse_matrix.cpp)
