--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(lab2 main.cpp)
+add_executable(lab2 main.cpp include/function.h src/function.cpp include/methods.h src/methods.cpp)
