--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -3,4 +3,6 @@ project(lab3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(lab3 main.cpp include/interpolators.h src/interpolators.cpp)
+add_executable(lab3 main.cpp include/interpolators.h src/interpolators.cpp ../lab1/lib/matrix.h
+               ../lab1/lib/matrix.cpp ../lab1/lib/matrixops.h ../lab1/lib/matrixops.cpp ../lab1/lib/tridiagonal_matrix.h
+               ../lab1/lib/tridiagonal_matrix.cpp)
