--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(lab3 main.cpp include/interpolators.h src/interpolators.cpp ../lab1/lib/matrix.h
                ../lab1/lib/matrix.cpp ../lab1/lib/matrixops.h ../lab1/lib/matrixops.cpp ../lab1/lib/tridiagonal_matrix.h
-               ../lab1/lib/tridiagonal_matrix.cpp include/approximators.h src/approximators.cpp)
+               ../lab1/lib/tridiagonal_matrix.cpp include/approximators.h src/approximators.cpp include/derivative.h src/derivative.cpp)
